@@ -333,3 +333,17 @@ if ( ! function_exists( 'wp_body_open' ) ) {
 		do_action( 'wp_body_open' );
 	}
 }
+
+function th_shop_mania_blocks_library() {
+    // WordPress block library styles
+    wp_enqueue_style( 'wp-block-library' );
+    wp_enqueue_style( 'wp-block-library-theme' );
+
+    // WooCommerce block styles (if WooCommerce is active)
+    if ( class_exists( 'WooCommerce' ) ) {
+        wp_enqueue_style( 'wc-block-style' );
+        wp_enqueue_style( 'wc-blocks-style' ); // This one may not always exist
+    }
+}
+add_action( 'wp_enqueue_scripts', 'th_shop_mania_blocks_library', 1005 );
+
